# ChunkDistributor

./: .gitignore  Algo.ui  AnimatePosition.cpp  AnimatePosition.h  CMakeLists.txt  CMakeUserPresets.json  DesignerPlugin.h  MotionTest.cpp  MotionTest.h  MotionTest.ui  PackerTester.h  ReadMe.md  ReadMe.md.old  Stage.cpp  Stage.h  cpp.hint  main.cpp  t0m3.json
docs/: Algorithm.md  CMakeLists.txt  Collaborate.md  UserInterface.md  npl_info.md
src/: Algo.cpp  Algo.h  Algo.ui  AlgoData.h  AlgoFactory.cpp  AlgoFactory.h  AlgoFactory.ui  AlgoGfx.cpp  AlgoGfx.h  AlgoRunner0.cpp  AlgoRunner0.h  CMakeLists.txt  DesignerPlugin.cpp  DesignerPlugin.h  FTest.cpp  FTest.h  FTest.ui  PackerTester.cpp  PackerTester.rc  PackerTester.ui  Stage.h
